continued changing the css media query code to fix issues with spacing, next up ui properties

--- a/frontend/src/components/layout/body/1_HomeTop.module.css
+++ b/frontend/src/components/layout/body/1_HomeTop.module.css
@@ -109,3 +109,15 @@
         margin-top: 35vw;
     }
 }
+
+@media (max-height: 700px) {            /* Height under 700px */
+    .caption {
+        margin-top: calc(35vh - 200px);
+    }
+}
+
+@media (max-height: 550px) {            /* Height under 700px */
+    .caption {
+        margin-top: 0px;
+    }
+}
