--- a/frontend/src/components/layout/footer/footer.module.css
+++ b/frontend/src/components/layout/footer/footer.module.css
@@ -5,6 +5,7 @@
     position: relative;
     background-color: black;
     width: 100%;
+    min-width: 400px;
     height: 80vh;
     position: -20vh;
     border-top-left-radius: 36px;
@@ -16,17 +17,20 @@
 
 .outerLogoContainer {
     display: flex;
+    position: relative;
     justify-content: center;
     align-items: flex-end;
     height: 10vh;
-    width: 100%;
+    width: 100vw;
     max-width: 3840px;
-    min-height: 3.7rem;
+    min-height: 70px;
     margin: 0px auto 0px auto;
     padding-top: 8px;
+    top: 1%;
 }
 
 .innerLogoContainer { 
+    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -37,18 +41,11 @@
     color: var(--white);
 }
 
-.companyName{
-    font-family: Montserrat;
-    font-size: 2rem;
-    letter-spacing: -1.3px;
-    margin-left: 45px;
-    font-weight: 100;
-    cursor: pointer;
-}
 .Logo {
     display: flex;
     height: 3.7rem;
     width: 3.57rem;
+    margin-top: 5px;
 }
 .Logo:hover {
     cursor: pointer;
@@ -62,24 +59,33 @@
     66% {transform: rotate(67.5deg);}
     100% {transform: rotate(90deg);}
 }
-
-
+.companyName{
+    font-family: Montserrat;
+    font-size: 2rem;
+    letter-spacing: -1.3px;
+    margin-left: 45px;
+    font-weight: 100;
+    cursor: pointer;
+    margin-top: 5px;
+}
 .outerFooterContainer {
     box-sizing: border-box;
     background-color: var(--black);
-    width: 64%;
+    width: 100vw;
     height: 70vh;
-    margin-left: 18%;
-    margin-right: 18%;
+    margin:auto;
 }
+
 .innerFooterContainer {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    width: 64vw;
     max-width: 100%;
     margin: auto;
     height: 60vh;
     font-family: Roboto;
+    min-height: 60px;
 }
 .contentsSection {
     display: flex;
@@ -91,6 +97,7 @@
     padding: 0px;
     min-width: 20%;
 }
+
 .footer_col {
     display: block;
     min-width: 147px;
@@ -140,12 +147,22 @@
 /*======    SOCIAL    =========================*/
 .socialRow{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     height: 5vh;
-    width: 100%;
+    min-height: 68px;
+    width: 100vw;
     min-width: 269px;
+    margin: auto;
+    background-color: black;
 }
-
+.social_links {
+    display: flex;
+    width: 100vw;
+    margin: auto;
+    justify-content: center;
+    background-color: black;
+}
 .social_links a {
     display: inline-block;
     height: 40px;
@@ -173,7 +190,7 @@
 }
 
 .copyright{
-    display: flex;
+
     font-family: Montserrat;
     font-size: .6rem;
     align-items: center;
@@ -185,6 +202,7 @@
     min-height: 12px;
     padding-top: 16px;
     padding-bottom: 20px;
+    width: 100vw;
 }
 @media (min-width: 475px){
     .container {max-width: 475px;}}
@@ -197,7 +215,8 @@
 
 @media (max-width: 1011px) {            /* Width under 1011px */
     .innerLogoContainer { 
-        width: 88%;
+        padding-left: 6%;
+        padding-right: 6%;
     }
     .footer_col h4 {
         font-size: 18px;
@@ -215,13 +234,45 @@
         margin-left: 1.1rem;
         margin-right: 1.1rem;
     }
+    .innerFooterContainer {
+        width: 80vw;
+    }
 }
 
-@media (max-width: 475px) {            /* Width under 1011px */
+@media (max-width: 475px) {            /* Width under 475px */
+    .footer {
+        height: 100vh;
+    }
     .contentsSection {
         justify-content: center;
     }
     .footer_col {
         padding-left: 25px;
     }
+    .outerFooterContainer{
+        margin-top: 20%;
+        margin-bottom: 0%;
+        padding-top: 0px;
+    }
+    .outerLogoContainer {
+        width: 100%;
+        margin: 0px 5px auto auto;
+        top: 10px;
+    }
 }
+
+@media (max-height: 600px) {            /* Height under 600px */
+    .footer {
+        height: 100vh;
+        position: relative;
+    }
+    .innerLogoContainer { 
+        top: 10px;
+    }
+    .outerFooterContainer{
+        margin-top: 3.5vw;
+        margin-bottom: 0%;
+        padding-top: 0px;
+    }
+}
+
